Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <h1>clide</h1>
 
 <p>Clarius IDE APIs</p>
+
+<p>Install from <a href="https://nuget.org/packages/Clide" title="NuGet">https://nuget.org/packages/Clide</a></p>
       </section>
     </div>
 
