--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/danielkzu/clide">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/clariuslabs/clide">View on GitHub</a>
 
           <h1 id="project_title">Clide</h1>
           <h2 id="project_tagline">Clarius IDE API</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/danielkzu/clide/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/danielkzu/clide/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/clariuslabs/clide/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/clariuslabs/clide/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -42,7 +42,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Clide maintained by <a href="https://github.com/danielkzu">danielkzu</a></p>
+        <p class="copyright">Clide maintained by <a href="https://github.com/clariuslabs">clariuslabs</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
